# garmin-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/garmin-cli/: Cargo.toml
crates/garmin-cli/src/: error.rs  lib.rs  main.rs
crates/garmin-cli/src/cli/commands/: activities.rs  auth.rs  devices.rs  health.rs  mod.rs  profile.rs  sync.rs  watch.rs  weight.rs
crates/garmin-cli/src/client/: api.rs  mod.rs  oauth1.rs  sso.rs  tokens.rs
crates/garmin-cli/src/config/: credentials.rs  mod.rs
crates/garmin-cli/src/db/: mod.rs  models.rs  schema.rs
crates/garmin-cli/src/models/: activity.rs  mod.rs
crates/garmin-cli/src/storage/: mod.rs  parquet.rs  partitions.rs  sync_db.rs
crates/garmin-cli/src/sync/: mod.rs  progress.rs  rate_limiter.rs  task_queue.rs  ui.rs
crates/garmin-cli/tests/: api_integration_tests.rs
crates/garmin-cli/tests/fixtures/: activities_list.json  blood_pressure.json  calories_summary.json  devices_list.json  endurance_score.json  fitness_age.json  hill_score.json  hrv.json  hydration.json  insights_sleep_7days.json  insights_stress_7days.json  intensity_minutes.json  lactate_threshold.json  personal_records.json  race_predictions.json  respiration.json  sleep_2025-12-04.json  social_profile.json  spo2.json  stress_2025-12-04.json  training_readiness.json  training_status.json  user_settings.json  vo2max.json  weight_list.json
docs/: RELEASE.md
docs/releases/: v2.0.2.md  v2.1.0.md
integrations/openclaw/garmin-health-analysis/: README.md  SKILL.md  install.sh
plans/: 2026-01-02-backfill-garmin-metrics.md  2026-03-08-simplify-sync-cli-surface-plan.md  2026-06-19-complete-sync-contract-plan.md
