[workspace]
resolver = "2"
members = ["crates/garmin-cli"]

[workspace.package]
version = "1.0.6"
edition = "2021"
authors = ["Vicente Reig <vicente@reig.dev>"]
license = "MIT"
repository = "https://github.com/vicentereig/garmin-cli"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP & Auth
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "multipart", "rustls-tls"] }
reqwest_cookie_store = "0.8"
bytes = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Credentials
keyring = "3"
dirs = "5"

# Output
tabled = "0.16"
comfy-table = "7"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
scraper = "0.21"
url = "2"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
rand = "0.8"
percent-encoding = "2"
urlencoding = "2"
rpassword = "7"

# Database
duckdb = { version = "1.1", features = ["bundled"] }

# Spatial/GIS
gpx = "0.10"
geo = "0.28"
wkt = "0.11"

# Testing
wiremock = "0.6"
tempfile = "3"
