[package]
name = "garmin-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Garmin Connect API - activities, health metrics, and more"

[[bin]]
name = "garmin"
path = "src/main.rs"

[dependencies]
# CLI
clap.workspace = true

# HTTP & Auth
reqwest.workspace = true
reqwest_cookie_store.workspace = true
bytes.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Credentials
keyring.workspace = true
dirs.workspace = true

# Output
tabled.workspace = true
comfy-table.workspace = true

# Utilities
thiserror.workspace = true
chrono.workspace = true
regex.workspace = true
scraper.workspace = true
url.workspace = true
base64.workspace = true
hmac.workspace = true
sha1.workspace = true
rand.workspace = true
percent-encoding.workspace = true
urlencoding.workspace = true
rpassword.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
